# qt_demo

./: CMakeLists.txt  InfoDialog.cpp  InfoDialog.h  PaintGracy.cpp  Q_person.cpp  Q_person.h  README.md  bigfiel.py  loadingWidget.cpp  loadingWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mawin.cpp  modelTest.cpp  paintWidget.cpp  paintWidget.h  publicInclude.h  res.qrc  setting.cpp  setting.h  setting.ui  tcpFileSender.cpp  tcpFileSender.h  tcpListening.cpp  tcpListening.h  tcpReceiver.cpp  tcpReceiver.h  tcpSock.cpp  tcpSock.h  udpListening.cpp  udpListening.h  userInfo.cpp  userInfo.h
images/: Readme.md
lib/: Readme.md  xml.lib
tinyxml/: Readme.md
